Configure post view and controller setup

--- a/app/assets/templates/mainIndex.html
+++ b/app/assets/templates/mainIndex.html
@@ -6,7 +6,7 @@
         <div class="col-md-3" data-ng-repeat='deck in data.decks'>
           <div class="box">
             <p>{{deck.name}}</p>
-            <a data-ng-href="#" class="btn btn-primary">Study</a>
+            <a class="btn btn-primary" ng-click="viewDeck($index)">Study</a>
           </div>
         </div>
       </div>
