--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,10 @@
   -moz-box-sizing: border-box;
 }
 
+.background {
+  background-color: white;
+}
+
 .box {
   border: 2px solid black;
   border-radius: 15px;
@@ -19,6 +23,23 @@
   }
 }
 
-.green {
-  background-color: green;
+.buttons {
+  margin-top: 100px;
+}
+
+.card {
+  border: 2px solid black;
+  text-align: center;
+  height: 570px;
+  margin-bottom: 50px;
+  padding-top: 170px;
+  position: absolute;
+  width: 1100px;
+  p {
+   font-size: 70px;
+  }
+  .home {
+    margin: 70px 0 0 -2px;
+    float: left;
+  }
 }
