--- a/app/assets/templates/mainDeckShow.html
+++ b/app/assets/templates/mainDeckShow.html
@@ -1,6 +1,8 @@
 <h1>FlashCardz Card</h1>
 <div class="container">
-  <div class="row">
-    <p>{{ data.content }}</p>
+  <div data-ng-repeat="card in data.cards">
+    <div class="card">
+      <p>{{ card.content }}</p>
+    </div>
   </div>
 </div>
