Add directive to allow the slides to change.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,10 @@
   -moz-box-sizing: border-box;
 }
 
+.background {
+  background-color: white;
+}
+
 .box {
   border: 2px solid black;
   border-radius: 15px;
@@ -19,24 +23,19 @@
   }
 }
 
+.buttons {
+  margin-top: 100px;
+}
+
 .card {
   border: 2px solid black;
-  height: 700px;
-  overflow: hidden;
+  text-align: center;
+  height: 570px;
   margin-bottom: 50px;
+  padding-top: 170px;
   position: absolute;
-  width: 100%;
-
-  &.is_previous {
-    left: -100%;
-  }
-
-  &.is_current {
-    left: 0;
-    z-index: 10;
-  }
-
-  &.is_next {
-    left: 100%;
+  width: 1100px;
+  p {
+   font-size: 70px;
   }
 }
