--- a/app/assets/templates/mainDeckShow.html
+++ b/app/assets/templates/mainDeckShow.html
@@ -6,8 +6,8 @@
         <p> {{ data.cardData.activeCard.content }} </p>
         <p> {{ data.cardData.activeCard.id }} </p>
         <div class="buttons">
-          <a class="btn btn-info btn-lg move" data-direction="back">Back</a>
-          <a class="btn btn-warning btn-lg move" data-direction="next">Next</a>
+          <a class="btn btn-info btn-lg move back" style="display:none;" data-direction="back">Back</a>
+          <a class="btn btn-warning btn-lg move next" data-direction="next">Next</a>
         </div>
       </div>
     </div>
