--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,11 +25,6 @@
 
 .buttons {
   margin-top: 100px;
-  a {
-    .hidden {
-      display: none;
-    }
-  }
 }
 
 .card {
@@ -42,5 +37,9 @@
   width: 1100px;
   p {
    font-size: 70px;
+  }
+  .home {
+    margin: 70px 0 0 -2px;
+    float: left;
   }
 }
