--- a/app/assets/templates/mainDeckShow.html
+++ b/app/assets/templates/mainDeckShow.html
@@ -1,15 +1,14 @@
 <h1>FlashCardz Card</h1>
 <div class="container">
-  <div>
-    <div class="card">
-      <div data-card-view  >
-        <p> {{ data.cardData.activeCard.content }} </p>
-        <p> {{ data.cardData.activeCard.id }} </p>
-        <div class="buttons">
-          <a class="btn btn-info btn-lg move back" style="display:none;" data-direction="back">Back</a>
-          <a class="btn btn-warning btn-lg move next" data-direction="next">Next</a>
-        </div>
+  <div class="card">
+    <div data-card-view  >
+      <p> {{ data.cardData.activeCard.content }} </p>
+      <p> {{ data.cardData.activeCard.id }} </p>
+      <div class="buttons">
+        <a class="btn btn-info btn-lg move back" style="display:none;" data-direction="back">Back</a>
+        <a class="btn btn-warning btn-lg move next" data-direction="next">Next</a>
       </div>
     </div>
+    <a class="btn btn-primary btn-md home" data-ng-click="backToDecks()">Back to decks</a>
   </div>
 </div>
