--- a/app/assets/templates/mainIndex.html
+++ b/app/assets/templates/mainIndex.html
@@ -3,9 +3,9 @@
   <div class="row">
     <div class="col-md-12">
       <div class="row">
-        <div class="col-md-3" data-ng-repeat='deck in data.decks'>
-          <div class="box">
-            <p>{{deck.name}}</p>
+        <div class="col-md-3" data-ng-repeat='deck in data.decks | orderBy : "+position" '>
+          <div class="box" data-card-position-toggler data-position ="{{ deck.position }}">
+            <p>{{ deck.name }}</p>
             <a class="btn btn-primary" data-ng-click="viewDeck(deck.id)">Study</a>
           </div>
         </div>
