Add Jquery UI and make decks sortable.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require bootstrap
  *= require bootstrap-theme
  *= require custom
- *= require_tree .
+ *= require jquery.ui.all
  *= require_self
+ *= require_tree .
  */
