--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,7 @@
 }
 
 .box {
+  background-color: white;
   border: 2px solid black;
   border-radius: 15px;
   height: 250px;
@@ -21,6 +22,10 @@
   p {
     margin-top: 10px;
   }
+}
+
+.select {
+  box-shadow: 10px 10px 20px black;
 }
 
 .buttons {
