--- a/app/assets/templates/mainIndex.html
+++ b/app/assets/templates/mainIndex.html
@@ -2,11 +2,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="row">
+      <div class="row" id="sortable">
         <div class="col-md-3" data-ng-repeat='deck in data.decks | orderBy : "+position" '>
-          <div class="box" data-card-position-toggler data-position ="{{ deck.position }}">
-            <p>{{ deck.name }}</p>
-            <a class="btn btn-primary" data-ng-click="viewDeck(deck.id)">Study</a>
+          <div data-card-position-toggler>
+            <div class="box">
+              <p>{{ deck.name }}</p>
+              <a class="btn btn-primary" data-ng-click="viewDeck(deck.id)">Study</a>
+            </div>
           </div>
         </div>
       </div>
