--- a/app/assets/templates/mainIndex.html
+++ b/app/assets/templates/mainIndex.html
@@ -3,9 +3,9 @@
   <div class="row">
     <div class="col-md-12">
       <div class="row" id="sortable">
-        <div class="col-md-3" data-ng-repeat='deck in data.decks | orderBy : "+position" '>
+        <div class="col-md-3" data-ng-repeat='deck in data.decks | orderBy : "+position"' id="deck_{{ deck.id }}">
           <div data-card-position-toggler>
-            <div class="box">
+            <div class="box" >
               <p>{{ deck.name }}</p>
               <a class="btn btn-primary" data-ng-click="viewDeck(deck.id)">Study</a>
             </div>
